Remove JDK 11+ requirement.